# mt-io

./: README.md  pyproject.toml
.github/workflows/: bump-version.yml  format.yaml  publish.yml  tests.yml
src/: __init__.py  reader.py
src/io/: reader.py
src/lemi/: lemi424.py
src/mt_io/: __init__.py  collection.py  reader.py
src/mt_io/lemi/: __init__.py  lemi417.py  lemi423.py  lemi424.py  lemi_collection.py
src/mt_io/metronix/: metronix_atss.py  metronix_collection.py  metronix_metadata.py
src/mt_io/miniseed/: miniseed.py
src/mt_io/nims/: gps.py  nims.py  nims_collection.py  response_filters.py
src/mt_io/phoenix/: phoenix_collection.py  read.py
src/mt_io/phoenix/readers/: base.py  calibrations.py  config.py  header.py  helpers.py  receiver_metadata.py
src/mt_io/phoenix/readers/contiguous/: decimated_continuous_reader.py
src/mt_io/phoenix/readers/mtu/: mtu_ts.py
src/mt_io/phoenix/readers/native/: native_reader.py
src/mt_io/phoenix/readers/segmented/: decimated_segmented_reader.py
src/mt_io/scripps/: zenc.py
src/mt_io/uoa/: orange.py  pr624.py
src/mt_io/usgs_ascii/: header.py  usgs_ascii.py  usgs_ascii_collection.py
src/mt_io/zen/: coil_response.py  z3d_collection.py  z3d_header.py  z3d_metadata.py  z3d_schedule.py  zen.py  zen_tools.py
src/phoenix/: read.py
src/phoenix/readers/mtu/: mtu_ts.py
src/usgs_ascii/: usgs_ascii.py
tests/: __init__.py  conftest.py  test_lemi417.py
tests/io/lemi/: test_lemi_collection.py
tests/lemi/: test_lemi.py  test_lemi_collection.py
tests/metronix/: test_metronix_atss.py  test_metronix_atss_mock.py  test_metronix_collection.py  test_metronix_collection_mock.py  test_metronix_metadata.py  test_metronix_metadata_mock.py
tests/miniseed/: test_read_miniseed.py
tests/mt_io/: test_converter.py
tests/mt_io/lemi/: test_lemi.py
tests/mt_io/zen/: test_zen_tools.py
tests/nims/: test_nims_collection.py  test_nims_collection_mock.py  test_nims_gps.py  test_nims_header.py  test_nims_response.py  test_read_nims.py  test_read_nims_mock.py
tests/phoenix/: test_base_reader.py  test_base_reader_mock.py  test_mtu_table_pytest.py  test_mtu_ts_pytest.py  test_phoenix_calibrations.py  test_phoenix_collection.py  test_phoenix_collection_mock.py  test_read.py  test_read_phoenix_continuous.py  test_read_phoenix_continuous_mock.py  test_read_phoenix_native.py  test_read_phoenix_native_mock.py  test_read_phoenix_segmented.py  test_read_phoenix_segmented_mock.py
tests/scripps/: test_zenc.py
tests/uoa/: test_pr624.py  test_uoa.py
tests/usgs_ascii/: test_ascii.py  test_ascii_collection.py  test_ascii_header.py
tests/zen/: test_coil_response.py  test_z3d.py  test_z3d_collection.py  test_z3d_collection_mock.py  test_z3d_header.py  test_z3d_header_mock.py  test_z3d_metadata.py  test_z3d_metadata_mock.py  test_z3d_mock_final.py  test_z3d_schedule.py  test_z3d_schedule_mock.py  test_zen_tools.py
